# coding-practice

./: .gitignore  CLAUDE.md  README.md
go/: BENCHMARK.md  go.mod
python/: BENCHMARK.md  pyproject.toml
python/problems/pg12909/: solution.py  test_solution.py
python/problems/pg1844/: solution.py  test_solution.py
python/problems/pg42577/: solution.py  test_solution.py
python/problems/pg42578/: solution.py  test_solution.py
python/problems/pg42579/: solution.py  test_solution.py
python/problems/pg42583/: solution.py  test_solution.py
python/problems/pg42584/: solution.py  test_solution.py
python/problems/pg42587/: solution.py  test_solution.py
python/problems/pg42626/: solution.py  test_solution.py
python/problems/pg42627/: solution.py  test_solution.py
python/problems/pg42628/: solution.py  test_solution.py
python/problems/pg42746/: solution.py  test_solution.py
python/problems/pg42747/: solution.py  test_solution.py
python/problems/pg42748/: solution.py  test_solution.py
python/problems/pg42839/: solution.py  test_solution.py
python/problems/pg42840/: solution.py  test_solution.py
python/problems/pg42842/: solution.py  test_solution.py
python/problems/pg42860/: solution.py  test_solution.py
python/problems/pg42861/: solution.py  test_solution.py
python/problems/pg42862/: solution.py  test_solution.py
python/problems/pg42883/: solution.py  test_solution.py
python/problems/pg42884/: solution.py  test_solution.py
python/problems/pg42885/: solution.py  test_solution.py
python/problems/pg42895/: solution.py  test_solution.py
(+206 files in other folders)
